force-app/main/default/objects/Metadata_Snapshot__c/Metadata_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores snapshots of critical metadata for drift detection and risk analysis.</description>
    <label>Metadata Snapshot</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>