force-app/main/default/objects/Metadata_Snapshot__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>The action performed on the metadata (Created, Deleted, Modified).</description>
    <label>Action Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>