force-app/main/default/objects/Metadata_Snapshot__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <description>The date and time the metadata was changed (from Setup Audit Trail).</description>
    <label>Change Date</label>
    <type>DateTime</type>
</CustomField>