force-app/main/default/objects/Metadata_Snapshot__c/fields/Connected_Org__c.field-meta.xml
<CustomField>
    <fullName>Connected_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The org associated with this metadata snapshot.</description>
    <label>Connected Org</label>
    <referenceTo>Connected_Org__c</referenceTo>
    <relationshipLabel>Metadata Snapshots</relationshipLabel>
    <relationshipName>Metadata_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>