force-app/main/default/objects/Metadata_Snapshot__c/fields/Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint__c</fullName>
    <description>A hash or signature representing the state of the metadata item at the time of the snapshot.</description>
    <label>Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>