force-app/main/default/objects/Metadata_Snapshot__c/fields/Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Name__c</fullName>
    <description>The API name of the metadata item.</description>
    <label>Metadata Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>