force-app/main/default/objects/Metadata_Snapshot__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <description>The type of metadata (Profile, Flow, Field, etc.).</description>
    <label>Metadata Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>CustomField</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>